--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/captain-wangrun-cn/nonebot-plugin-better-broadc
 [tool.poetry.dependencies]
 python = "^3.9"
 nonebot2 = "^2.0.0"
+pydantic = "^1.5.0",
 nonebot-adapter-onebot = "^2.0.0"
 nonebot-plugin-waiter = "0.8.0"
 
